--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.3/d3.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/topojson/1.6.9/topojson.min.js"></script>
-<script src="datamaps.all.hires.js"></script>
+<script src="maps/datamaps.all.hires.js"></script>
 <h1>VC Funding in the USA (Company x Geography)</h1>
 <div id="container" style="position: relative; width: 1000px; height: 800px;"></div>
 <script>
