--- a/female_funded_company_ratios_us.html
+++ b/female_funded_company_ratios_us.html
@@ -8,7 +8,7 @@
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="scripts/jquery-csv.js"></script>
-    <h1>VC Funding in the USA (Company x Geography)</h1>
+    <h1>Percent of VC Funded Companies with Female Leadership</h1>
     <div id="container" style="position: relative; width: 1000px; height: 800px;"></div>
     <script src="scripts/female_funded_company_ratios_us.js"></script>
 </body>
